New branch Create
1) Menu screen design and functionality  2) Send-Wallet screen
3) Recive -Wallet design from old layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -353,5 +353,10 @@
     <string name="word_nr10">select the <b>10th</b> word of your recovery phrase from the list below</string>
     <string name="word_nr11">select the <b>11th</b> word of your recovery phrase from the list below</string>
     <string name="early_access">early access</string>
+    <string name="your_current_address">Your Current Address</string>
+    <string name="send">Send</string>
+    <string name="receive">Receive</string>
+    <string name="balance">Balance</string>
+    <string name="Amount">Amount</string>
 
 </resources>
